--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>daw.programacion.tests</groupId>
-  <artifactId>tests-para-noobs</artifactId>
+  <groupId>daw.programacion.clases</groupId>
+  <artifactId>clases</artifactId>
   <version>1.0 SNAPSHOT</version>
 
-  <name>tests-para-noobs</name>
+  <name>Clases</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
